docs: README guncellendi - kurulum, dosya yapisi, ozellikler